# arXiv_co-work

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py  migrations.md  script.py.mako
alembic/versions/: b98da81ccff5_init_paper_model.py
bruno_rag/: health-check.yml  opencollection.yml
src/rag/: __init__.py  config.py  main.py
src/rag/db/: __init__.py
src/rag/db/config/: __init__.py  base.py  factory.py  interface.py  postgresql.py  session.py
src/rag/db/model/: __init__.py  chunk_model.py  paper_model.py
src/rag/db/repository/: __init__.py  chunk_repository.py  paper_repository.py
src/rag/routes/: health.py
src/rag/service/arxiv/: __init__.py  arxiv_client.py  arxiv_ingestion_service.py  paper_download_service.py  pdf_downloader.py  utils.py
src/rag/service/s3/: __init__.py  dependency.py  factory.py  interface.py  s3_client.py  s3_storage.py
