[project]
name = "arXiv_co-work"
version = "0.1.0"
description = "retrieval agent for long running paper curation"
requires-python = ">=3.12, <3.13"
dependencies = [
  "fastapi[standard]>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.8",
  "httpx>=0.28",
  "python-dateutil>=2.9",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "boto3>=1.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "black>=25.0",
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.1",
  "ruff>=0.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = false
mypy_path = "src"